Header posts spacing fixes

--- a/contradefensa/content/themes/contradefensa/assets/css/contra.css
+++ b/contradefensa/content/themes/contradefensa/assets/css/contra.css
@@ -58,8 +58,8 @@ nav ul {
 }
 
 #welcome .logo {
-    width: 120px;
     margin: 0 auto;
+    width: 120px;
 }
 
 #welcome .logo rect {
@@ -101,6 +101,7 @@ nav ul {
     grid-area: posts;
     grid-template-columns: 1fr;
     padding: 3vmax;
+    place-content: space-between;
 }
 
 #slides article {
@@ -142,9 +143,9 @@ nav ul {
 
 @media (max-width: 500px) {
     #slides article img {
+        max-height: 75px;
         max-width: 150px;
         min-width: 150px;
-        max-height: 75px;
     }
 }
 
@@ -174,6 +175,6 @@ nav ul {
 
 @media screen and (min-width: 769px) {
     #slides {
-        grid-template-columns: 60%;
+        /* grid-template-columns: .8fr; */
     }
 }
